[package]
name = "parser_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
scraper = "0.19.0"
tokio = { version = "1.38.0", features = ["full"] }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
reqwest = { version = "0.12.5", features = ["blocking", "json"] }
headless_chrome = "1.0.10"
