[package]
name = "parser_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
scraper = "0.19.0"
tokio = { version = "1.38.0", features = ["full"] }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
reqwest = { version = "0.12.5", features = ["blocking", "json", "cookies"] }
futures = "0.3.30"
anymap = "0.12.1"
ureq = { version = "2.10.0", features = ["charset", "json"] }
url = "2.5.2"
hyper = "1.4.1"
isahc = "1.7.2"
follow-redirects = "0.1.3"
